--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,20 @@
 
 buildscript {
     repositories {
+        mavenCentral()
         jcenter()
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-
-        // NOTE: Do not place your application dependencies here; they belong
+         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
         google()
     }
