device view added to recipe steps and ingredients

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity
             android:name=".ui.activity.ContainerDetailRecipeActivity"
             android:label="@string/title_activity_step"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:parentActivityName=".ui.activity.RecipeActivity"/>
     </application>
 
 </manifest>
