--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,17 +27,28 @@
             android:configChanges="orientation|screenSize|layoutDirection"
             android:label="@string/title_activity_step"
             android:parentActivityName=".ui.activity.RecipeActivity" />
-        <activity android:name=".ui.activity.FullScreenVideoActivity"
+        <activity
+            android:name=".ui.activity.FullScreenVideoActivity"
             android:parentActivityName=".ui.activity.ContainerDetailRecipeActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
-        </activity>
         <receiver android:name=".ui.activity.FullScreenVideoActivity$MediaReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".AppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/app_widget_info" />
+        </receiver>
+        <service android:name="WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
 
 </manifest>
